feat : week1 for Introduction to Machine Learning completed

--- a/Week1/week1.ipynb
+++ b/Week1/week1.ipynb
@@ -104,11 +104,176 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 8. Deep Learning\n",
+    "\n",
+    "#### 1. Question 1\n",
+    "Which one of the following best characterizes deep learning?\n",
+    "\n",
+    "Multiple layers of latent processes\n",
+    "\n",
+    "\n",
+    "#### Question 2\n",
+    "Using a multilayer perceptron for document analysis, which of the following is the best interpretation of the layer 1 filters b_1 through b_K?\n",
+    "\n",
+    "Topics, such as sports or history\n",
+    "\n",
+    "\n",
+    "#### Question 3\n",
+    "Using a multilayer perceptron for document analysis, which of the following is the best interpretation of the layer 2 filters c_1 through c_J?\n",
+    "\n",
+    "Meta-topics, such as history of sports or politics of sports"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 10. Model Selection\n",
+    "\n",
+    "#### Question 1\n",
+    "Given the following image of data classifications, which of the following models would you choose?\n",
+    "\n",
+    "<img src=\"Images/example_1.png\">\n",
+    "\n",
+    "Multilayer perceptron\n",
+    "\n",
+    "\n",
+    "#### Question 2\n",
+    "Given the following image of data classifications, which of the following models would you choose?\n",
+    "\n",
+    "<img src=\"Images/5_example_2.png\">\n",
+    "\n",
+    "Multilayer perceptron\n",
+    "\n",
+    "\n",
+    "#### Question 3\n",
+    "Given different sets of training data, in which model would you expect more variance in the learned parameters?\n",
+    "\n",
+    "Multilayer perceptron\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 12. History of Neural Networks\n",
+    "\n",
+    "#### 1. Question 1\n",
+    "When was the multilayer perceptron introduced?\n",
+    "\n",
+    "1960\n",
+    "\n",
+    "\n",
+    "#### Question 2\n",
+    "Why did neural networks not perform well \"in the wild\" in the early 1990s?\n",
+    "\n",
+    "Insufficient training data\n",
+    "\n",
+    "\n",
+    "#### Question 3\n",
+    "Which of the following contributed to neural networks outperforming humans in the task of image analysis? (Choose all that are correct.)\n",
+    "\n",
+    "* New, deeper network\n",
+    "* GPU computational platform\n",
+    "* Large set of training data\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Convolutional Neural Networks\n",
+    "\n",
+    "## 4. CNN Concepts\n",
+    "\n",
+    "#### Question 1\n",
+    "Which one of the following models, when used for image classification, can exceed the performance of humans?\n",
+    "\n",
+    "Convolutional neural network\n",
+    "\n",
+    "#### Question 2\n",
+    "Which of the following best describes the hierarchical structure of images, listed from most complex to simplest?\n",
+    "\n",
+    "High-level motifs, sub-motifs, and atomic elements\n",
+    "\n",
+    "#### Question 3\n",
+    "In the CNN explained in this lesson, which of the following allows a classification decision to be made?\n",
+    "\n",
+    "Layer 3 feature map\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 8. CNN Math Model\n",
+    "\n",
+    "#### Question 1\n",
+    "What is the outcome of convolving the layer 2 filters with the layer 1 feature maps?\n",
+    "\n",
+    "Layer 2 feature maps\n",
+    "\n",
+    "\n",
+    "#### Question 2\n",
+    "In general terms, the basic steps to do learning are:\n",
+    "\n",
+    "1. Obtain a large set of labeled data\n",
+    "2. [ What goes here? ]\n",
+    "3. Determine parameters that minimize the sum over loss\n",
+    "\n",
+    "Determine the loss function, which computes loss between true label and model label\n",
+    "\n",
+    "\n",
+    "#### Question 3\n",
+    "Why is learning hard? (Choose all that are correct.)\n",
+    "\n",
+    "* The parameters are computationally expensive to compute\n",
+    "* There can be many local minima, even for two parameters\n",
+    "* The parameter space is large"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Applications in the Real World\n",
+    "\n",
+    "## 4. Applications In Use and Practice\n",
+    "\n",
+    "#### Question 1\n",
+    "In the experiment where light was shined on mammalian retinas, what were found to be (almost exactly) the fundamental shapes that excited exactly one neuron?\n",
+    "\n",
+    "Layer 1 filters that CNN learns\n",
+    "\n",
+    "\n",
+    "#### Question 2\n",
+    "In the example network in this lesson, which layer of filter might have the shape of an eye in a CNN trained on real image data?\n",
+    "\n",
+    "Layer 2 filter\n",
+    "\n",
+    "\n",
+    "#### Question 3\n",
+    "Which of the following are example of deep CNNs given in the videos? \n",
+    "\n",
+    "* Classifying images\n",
+    "* Digit recognition\n",
+    "* Playing Go\n",
+    "* Captioning images\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "\n"
+   ]
   }
  ],
  "metadata": {
