--- a/Week3/Lab/3B_Convolutional_Neural_Networks_Assignment.ipynb
+++ b/Week3/Lab/3B_Convolutional_Neural_Networks_Assignment.ipynb
@@ -375,7 +375,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "`[I'll go with ]`"
+    "`[I'll go with CNN]`"
    ]
   },
   {
