feat :  completed week4

--- a/Week4/week4.ipynb
+++ b/Week4/week4.ipynb
@@ -77,7 +77,32 @@
    "metadata": {},
    "source": [
     "# Recurrent Neural Networks and Long Short-Term Memory\n",
-    "\n"
+    "\n",
+    "## 5. Lesson 3\n",
+    "\n",
+    "\n",
+    "#### Question 1\n",
+    "What two entities are concatenated and sent into a neural network?\n",
+    "\n",
+    "The vector associated with the previous word and the hidden vector of the previous network\n",
+    "\n",
+    "\n",
+    "#### Question 2\n",
+    "How many control neural networks are used in LSTM?\n",
+    "\n",
+    "3\n",
+    "\n",
+    "\n",
+    "#### Question 3\n",
+    "Which of the following best describes what the f_n neural network does?\n",
+    "\n",
+    "Controls the degree of “forgetting” of the old memory cell.\n",
+    "\n",
+    "\n",
+    "#### Question 4\n",
+    "In the example of figure captioning, how are the parameters of the LSTM model initialized?\n",
+    "\n",
+    "From the features at the top of a CNN that analyzed the image.\n"
    ]
   },
   {
